# bonded

./: .gitignore  AGENTS.md  ANDROID_VPN_TRAFFIC_FLOW_INVESTIGATION.md  CONCURRENCY_TEST_PLAN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: build-artifacts.yml
android/: README.md  pubspec.yaml
android/android/: .gitignore  gradle.properties  settings.gradle.kts
android/android/app/: build.gradle.kts  functions.gradle.kts
android/android/app/src/main/: AndroidManifest.xml
android/android/app/src/main/kotlin/com/bonded/bonded_app/: AndroidNetworkPathManager.kt  BondedVpnService.kt  MainActivity.kt  NetworkTestForegroundService.kt  NetworkTestReceiver.kt  PairedServerStore.kt  ProtocolStressTester.kt  VpnControlReceiver.kt
android/android/app/src/main/res/xml/: network_security_config.xml
android/lib/: main.dart
android/lib/models/: pairing_model.dart
android/lib/screens/: client_logs_screen.dart  dashboard_screen.dart  home_screen.dart  network_tests_screen.dart  pairing_confirm_screen.dart  qr_scanner_screen.dart  server_config_screen.dart  settings_screen.dart  stress_test_screen.dart
android/lib/services/: background_service.dart  pairing_service.dart
android/lib/utils/: background_notification_helper.dart
android/test/: pairing_model_test.dart  widget_test.dart
crates/bonded-cli/: Cargo.toml
crates/bonded-cli/src/: main.rs
crates/bonded-client/: Cargo.toml
crates/bonded-client/src/: client_integration.rs  lib.rs
crates/bonded-core/: Cargo.toml
crates/bonded-core/src/: auth.rs  config.rs  lib.rs  scheduler.rs  session.rs  transport.rs
crates/bonded-ffi/: Cargo.toml
crates/bonded-ffi/src/: lib.rs
crates/bonded-server/: Cargo.toml
crates/bonded-server/src/: auth_handshake.rs  authorized_keys.rs  frame_forwarder.rs  health.rs  invite_tokens.rs  main.rs  network_runtime.rs  pairing_qr.rs  server_integration.rs  session_registry.rs  smoltcp_forwarder.rs  status.rs  tun_bridge.rs  tunnel_pcap.rs
docs/design/: README.md  _template.md  implementation-plan.md
docs/guides/: DEBUGGING_VPN_TRAFFIC.md  dev-setup.md
docs/requirements/: README.md  open-questions.md  platform-requirements.md  product-requirements.md
scripts/: build-android-native.sh
server/: Cargo.toml  Dockerfile  README.md
server/src/: main.rs
