[workspace]
members = [
    "crates/bonded-core",
    "crates/bonded-client",
    "crates/bonded-server",
    "crates/bonded-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "TBD"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
notify = "8"
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-util = "0.7"
toml = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
