[workspace]
members = [
    "crates/bonded-core",
    "crates/bonded-client",
    "crates/bonded-server",
    "crates/bonded-cli",
    "crates/bonded-ffi",
]
exclude = ["server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "TBD"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
notify = "8"
pnet_datalink = "0.35"
qrcode = "0.14"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tokio-util = "0.7"
toml = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tun = { version = "0.8.6", features = ["async"] }
