[package]
name = "bonded-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux CLI client for Bonded"

[dependencies]
anyhow.workspace = true
bonded-client = { path = "../bonded-client" }
bonded-core = { path = "../bonded-core" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
