[package]
name = "bonded-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared client runtime for Bonded clients"

[dependencies]
anyhow.workspace = true
bonded-core = { path = "../bonded-core" }
bytes.workspace = true
pnet_datalink.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
tun.workspace = true
