[package]
name = "bonded-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared core protocol and runtime primitives for Bonded"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
