[package]
name = "bonded-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared core protocol and runtime primitives for Bonded"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-rustls.workspace = true
futures-util.workspace = true
toml.workspace = true
