[package]
name = "bonded-ffi"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow.workspace = true
bonded-client = { path = "../bonded-client" }
bonded-core = { path = "../bonded-core" }
bytes.workspace = true
serde_json = "1"
tokio.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
jni-sys = "0.4"
