[package]
name = "bonded-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bonded server binary"

[dependencies]
anyhow.workspace = true
bonded-core = { path = "../bonded-core" }
clap.workspace = true
notify.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
