[package]
name = "bonded-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bonded server binary"

[dependencies]
anyhow.workspace = true
bonded-core = { path = "../bonded-core" }
bytes.workspace = true
clap.workspace = true
notify.workspace = true
qrcode.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
socket2 = "0.5"

[dev-dependencies]
bonded-client = { path = "../bonded-client" }
rcgen = "0.13"
